# corode

./: Cargo.toml  DOCUMENTATION.md  README.md  ROADMAP.md  TECHNICAL_DOCUMENTATION.md  linker.ld  run.sh  rust-toolchain.toml  shell.nix  trap.S
.cargo/: config.toml
.idx/: dev.nix  dev.nix.backup
examples/: condition_4711.rs
scripts/: oracle_proof.py
src/: block.rs  cond.rs  condition.rs  harlekin.rs  main.rs  pmp.rs  sidekernel.rs  state.rs  trap.S  trap.rs  trickster.rs  uart.rs  zuse.rs
src/memory/: mod.rs  vector_alloc.rs
src/terminal/: mod.rs  system_terminal.rs
